Conteudo da Pagina HTML

--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
-Kg M1 M2 M3
-21.50 34.1000 34.0000 34.0000
-52.00 82.3000 82.2900 82.3000
-69.10 109.0300 109.0000 109.0300
-68.30 107.8500 107.0500 107.8500 
-85.00 134.0000 134.0000 134.0000
-2.00 3.4000 3.3700 3.3800
-4.00 6.6000 6.6000 6.6000
-6.00 9.8000 9.7500 9.7700
-8.00 12.9900 12.9700 12.9600
-10.00 15.2000 15.2000 15.1400
+<html>
+    <head>
+    </head>         
+    <body>          
+        <h1>Git</h1>
+        <h2>Trabalhando em Equipe com Controle e Segurança</h2>
+
+        <p>Um curso que explora os benefícios de utilizar o Git como ferramenta de controle de versão para projetos em qualquer linguagem, em qualquer plataforma.</p>
+
+        <h3>Principais benefícios:</h3>
+        <ul>
+            <li>Funciona de maneira distribuída</li>
+            <li>Permite a edição concorrente de arquivos do projeto</li>
+            <li>Não depende de uma conexão ativa com um servidor</li>
+        </ul>
+    </body>         
+</html>
