Adicionando estilo na página

--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <html>
     <head>
     </head>         
-    <body>          
+    <body>  
+		<header>
+			<link rel="stylesheet" type="text/css" href="/design.css"/>
+		</header>	
         <h1>Git</h1>
         <h2>Trabalhando em Equipe com Controle e Segurança</h2>
 		<h3></h3>
